# Semantic-Lexicon

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  fixed_semantic_script.sh  mkdocs.yml  mypy-strict.ini  pyproject.toml
.github/workflows/: ci.yml  cli-tests.yml
.meta/: agent_notice.txt
Archive/: cross_domain_validation_report.json  intent_performance_profile.json  semantic_lexicon_v2.py  topic_pure_retrieval_runs.json
Stories/dump.md/Persona/Faruk/allowed-to-read/: not-allowed-to-edit
data/domain/: domain_hierarchy.jsonl  intent.jsonl  knowledge.jsonl
docs/: analysis.md  architecture.md  cli-test-report.md  cli.md  index.md  toolkit-enhancement-guide.md  user-guide.md
docs/api/: algorithms.md  cli.md  config.md  model.md
docs/articles/: fixed-point-ladders.md  knowledge-selector.tex
docs/prompt-evaluations/: index.md  manual_prompt_test.md
docs/scripts/: run_prompt_sweep.py
examples/: cross_domain_validation.py  personarag_quickstart.py  quickstart.py  tadkit_quickstart.py  tadkit_streamlit_app.py  truth_aware_decode_demo.py
examples/logs/: paris_capital_truth_aware_decode.json
src/: neural_integration.py  test_neural_model.py
src/personarag/: core.py  gate.py
src/semantic_lexicon/: __init__.py  advanced_wikipedia_extractor.py  cli.py  compliance.py  config.py  decoding_tad.py  diagnostics.py  direct_qa_generator.py  embeddings.py  generator.py  go_no_go.py  graph_api.py  graph_memory.py  intent.py  knowledge.py  loaders.py  logging.py  model.py  oracle.py  oracle_graph.py  persona.py  presentation.py  runtime.py  safety.py  template_learning.py  templates.py  token_index.py  training.py  wikipedia_extractor.py
src/semantic_lexicon/algorithms/: __init__.py  exp3.py  topic_pure_retrieval.py
src/semantic_lexicon/analysis/: __init__.py  calibration.py  convergence.py  error.py  performance.py  regret.py  reward.py  validation.py
src/semantic_lexicon/api/: __init__.py  feedback.py
src/semantic_lexicon/data/: __init__.py  cross_domain_validation.jsonl  domain_hierarchy.jsonl  intent.jsonl  knowledge.jsonl  sample_corpus.json
src/semantic_lexicon/pipelines/: __init__.py  workflows.py
src/semantic_lexicon/utils/: __init__.py  clipboard.py  install.py  io.py  random.py  text.py
src/tadkit/: __init__.py  cli.py  core.py
tests/: conftest.py  prompt_generation_report.json  test_algorithms.py  test_analysis.py  test_cli.py  test_clipboard_stdin.py  test_compliance_report.py  test_config.py  test_diagnostics.py  test_generator.py  test_intent.py  test_intent_system.py  test_io.py  test_knowledge.py  test_model.py  test_runtime.py  test_safety.py  test_tad_oracle.py  test_template_learning.py  test_templates.py  test_utils_install.py  test_validation_pipeline.py
tests/fixtures/: sample_processed.json
