[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-lexicon"
version = "0.1.0"
description = "Neural semantic modeling toolkit built around learned embeddings and persona-conditioned generation."
authors = [
    {name = "Semantic Lexicon Team"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23",
]

[project.urls]
Homepage = "https://github.com/example/semantic-lexicon"
Documentation = "https://github.com/example/semantic-lexicon#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
